[package]
name = "bingbg"
version = "0.1.3"
authors = ["Rrogntudju"]
edition = "2018"
build = "build/build.rs"

[dependencies]
minreq = { version = "2", features = ["https", "json-using-serde"] }
windows = "0.9"
image = {version = "0.23", default-features = false, features = ["jpeg", "bmp"]}
serde_json = "1"

[build-dependencies]
winres = "0.1"
windows = "0.8"

[profile.release]
lto = true 
codegen-units = 1
panic = "abort"