[package]
name = "Bingbg"
version = "0.1.5"
authors = ["Rrogntudju"]
edition = "2021"
build = "build/build.rs"

[dependencies]
reqwest = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
windows = { version = "0.56", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "bmp"] }
serde_json = "1"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = "thin"